ver10: refactor jwt code and noti